# axum-with-discord-bot

./: Cargo.toml  Shuttle.toml
src/: commands.rs  lib.rs  router.rs
