[package]
name = "axum-with-discord-bot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
anyhow = "1.0.62"
axum = "0.6.4"
hyper = "0.14.24"
poise = "0.5.2"
serde = "1.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.9.0"
shuttle-service = { version = "0.9.0", features = ["bot-serenity"] }
shuttle-shared-db = { version = "0.9.0", features = ["postgres"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
tracing = "0.1.35"
tokio = "1.22.0"

[patch.crates-io.mime_guess]
git="https://github.com/NathanSWard/mime_guess.git"
branch="platform-path-separators"
