[package]
name = "axum-with-discord-bot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
anyhow = "1.0.62"
axum = "0.6.4"
hyper = "0.14.24"
poise = "0.5.2"
serde = "1.0"
shuttle-secrets = "0.9.0"
shuttle-service = { version = "0.9.0", features = ["bot-serenity"] }
sync_wrapper = "0.1.2"
tokio = "1.22.0"

[patch.crates-io.mime_guess]
git="https://github.com/NathanSWard/mime_guess.git"
branch="platform-path-separators"
